<resources>
    <string name="app_name">AuctionApp</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_phone">Phone (optional)</string>
    <string name="prompt_username">User Name</string>
    <string name="action_submit">Submit</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="create_bid_btn">Create Bid</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="notification_auctionitem_post">Auction Item posted, this may take some time .</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_create_auctionitem">Create Auction Item</string>
    <string name="action_create_auction_item">Submit</string>
    <string name="prompt_estimatedBid">Estimated Bid</string>
    <string name="prompt_title">Title</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_temp">TempActivity</string>
</resources>